add data preparation import

--- a/environment.yml
+++ b/environment.yml
@@ -14,7 +14,7 @@ dependencies:
     - -e .
     - jupyter_http_over_ws
   - bokeh==2.4.3
-  - apache-beam
+  - apache-beam==2.41.0
   - future
   - gin-config
   - google-cloud-storage
@@ -28,6 +28,7 @@ dependencies:
   - nomkl
   - numba
   - numpy
+  - pyparsing<=2.4.7
   - scipy
   - six
   - tensorboard
